Add me and frank as codeowners

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,4 @@
 # Add members from your group here - Will automatically get emails when there is a new pull request
 * @MartinALund @team-member
+* @joha321j @team-member
+* @fran2238 @team-member
