--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,3 @@
 # Add members from your group here - Will automatically get emails when there is a new pull request
 * @MartinALund @team-member
+@mich040m @Loui629f
