--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,6 @@
 # Add members from your group here - Will automatically get emails when there is a new pull request
 * @MartinALund @team-member
+@hans2820 @team-member
+@kris9139 @team-member
+@Zxited @team-member
+@ande714b @team-member
