--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
 # Add members from your group here - Will automatically get emails when there is a new pull request
-* @MartinALund @team-member
+* @MartinALund @team-member @KaareSandbøl@membertwo @KenniHolm@memberthree @kasperHoffmann@memberfour
