--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,4 @@
 # Add members from your group here - Will automatically get emails when there is a new pull request
 * @MartinALund @team-member
+* @JacobDahl @grand-wizard
+* @RasmusØstergaard @white-knight
