--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
-# Add members from your group here - Will automatically get emails when there is a new pull request
-* @MartinALund @team-member
+# Add the collaborators from your project here with the syntax '@Collab1 @Collab2' and so on by adding their @username. They will automatically get emails whenever there is a pull request
+* @username @username @username @username
